admin editor management complete